removed title and added flex rules, need to fix IE11 overflow issue

--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -1,3 +1,8 @@
+@media print {
+  .desktop-title {
+    display: none;
+  }
+}
 .stop-page-content-wrapper {
   min-height: 0;
   display: flex;
