--- a/app/component/timetable.scss
+++ b/app/component/timetable.scss
@@ -69,6 +69,7 @@
       .timetable-rowcontainer {
         display: inline-block;
         width: 100%;
+        height: 100%;
         @media print {
           padding-top: 0.6em;
           padding-bottom: 0.6em;
@@ -83,7 +84,11 @@
     padding-bottom: 0;
     padding-right: 0;
     width: 100%;
+    height: 100%;
     display: flex;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 0;
     .timetablerow-linetime {
       margin-right: 0.3em;
     }
